Update material desktop theme

--- a/home/.themes/Material-DeepOcean-BL-LB/gtk-3.0/gtk.css
+++ b/home/.themes/Material-DeepOcean-BL-LB/gtk-3.0/gtk.css
@@ -16799,6 +16799,11 @@ tooltip > box {
   padding: 4px 8px;
 }
 
+tooltip * {
+  background-color: transparent;
+  color: #ffffff; 
+}
+
 /*****************
  * Color Chooser *
  *****************/
